Fix a couple of MD downloads memory leaks.

Bug: 787571
Change-Id: Id7f2533890ca493b4eb6bee16cd6cdbee475554c
Reviewed-on: https://chromium-review.googlesource.com/783750
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518423}
Former-commit-id: 03cf015b3fe853f59ce609cb643e4647ebc0fe80